--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ td, th {
     padding: 10px;
     width: 12vw;
     height: 12vh;
+    transition: all 200ms ease-in-out;
+}
+
+td:hover, th:hover b:hover{
+    box-shadow: 0px 3px 8px white;
+    box-shadow: 0px 3px 30px black;
+    background-color: white;
+    color:  rgb(22, 102, 112);
 }
 
 #sum {
@@ -54,10 +62,18 @@ td, th {
     font-weight: bold;
     padding: 15px;
     color: black;
-    background-color: #fff;
+    background-color: white;
+    transition: all 200ms ease-in-out;
 }
 
 .add {
     margin-right: 20px;
+}
+
+.add:hover,.dlt:hover  {
+    box-shadow: 0px 3px 8px white;
+    box-shadow: 0px 3px 30px black;
+    background-color: rgb(22, 102, 112);
+    color: white;
 }
 
